Finished mass estimation

--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -161,6 +161,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
+\selectlanguage{british}
+
 % Front matter
 % \input{frontmatter/masters_title_page}
 \pagenumbering{roman}
@@ -183,23 +185,6 @@
 \input{system_overview/system_overview.tex}
 \input{results/results.tex}
 \input{conclusion/conclusion.tex}
-
-% \input{system_id/plots/MAE_vs_Ts.tex}
-% \input{system_id/plots/MAE_diff.tex}
-% \input{system_id/plots/MAE_vs_q.tex}
-% \input{system_id/plots/MAE_vs_train_Simulink_angular_rate.tex}
-% \input{system_id/plots/noise_vs_no_noise.tex}
-% \input{system_id/plots/havok_vs_dmd_noise.tex}
-% \input{system_id/plots/singular_values.tex}
-
-% \input{system_id/plots/prediction_single_pend_black.tex}
-% \input{system_id/plots/prediction_single_pend_white.tex}
-% \input{system_id/plots/prediction_double_pend_black.tex}
-% \input{system_id/plots/prediction_double_pend_white.tex}
-% \input{system_id/plots/FFT_amplitude_single_pend.tex}
-% \input{system_id/plots/FFT_amplitude_double_pend.tex}
-
-
 
 % Bibliography
 \bibliography{Thesis.bib}
