--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -4,15 +4,14 @@
 \label{chap:system_id}
 
     \paragraph{}
-    System identification is the process of creating mathematical models of a dynamical system by using input and output measurements of that system.
+    System identification is the process of creating a mathematical model of a dynamical system by using input and output measurements of that system.
     Two major approaches are used to represent the dynamics of such a system:
     \begin{enumerate}
         \item A priori mathematical modelling with parameter estimation
         \item Data-driven system identification
     \end{enumerate}
 
-    Models determined from a priori modelling and parameter estimation are referred to as white-box models.
-    In contrast, data-driven system identification methods result in black-box models.
+    \paragraph{}
     This chapter discusses these system identification approaches and describes the differences between them.
     For each approach, different estimation techniques are explained and applied to the quadrotor and payload system.
     The results of these techniques are then compared to each other.
