--- a/system_id/plots/FFT_double_pend.tex
+++ b/system_id/plots/FFT_double_pend.tex
@@ -1,4 +1,4 @@
-\begin{subfigure}{0.45\columnwidth}
+\begin{subfigure}[t]{0.45\columnwidth}
     \centering
     \begin{tikzpicture}
         \begin{axis}[            
