--- a/system_id/plots/FFT_pos_step.tex
+++ b/system_id/plots/FFT_pos_step.tex
@@ -32,6 +32,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Single pendulum}
-    \label{fig:FFT_single_pend}
+    \caption{The single-sided amplitude spectrum of the FFT}
+    \label{fig:FFT_pos_step}
 \end{subfigure}
