--- a/system_id/plots/pos_step_single_pend.tex
+++ b/system_id/plots/pos_step_single_pend.tex
@@ -2,12 +2,12 @@
     \centering
     \begin{tikzpicture}
         \begin{axis}[            
-            xlabel = Frequency,
-            ylabel = Amplitude,
-            x unit = \si{\radian/\second},
-            % y unit = \si{\second},
-            xmin = 0.3,     xmax = 1,
-            ymin = 0,  ymax = 0.006,
+            xlabel = Time,
+            ylabel = Payload angle,
+            x unit = \si{\second},
+            y unit = \si{\radian},
+            xmin = 0,   xmax = 20,
+            ymin = -0.8,  ymax = 0.8,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -24,14 +24,14 @@
                 Dark2\nextlist
             }
         ]
-
+        \pgfplotsset{cycle list shift=1}
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = f, y = P1, col sep = comma] 
-        {system_id/csv/FFT_SITL_single_pos_step_m0.3_l1.csv.csv};
+        table[x = time, y = theta, col sep = comma] 
+        {system_id/csv/pos_step_SITL_single_pos_step_m0.3_l1.csv.csv};
 
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Single pendulum}
-    \label{fig:FFT_single_pend}
+    \caption{Position step response of the payload swing angle}
+    \label{fig:pos_step_single_pend}
 \end{subfigure}
